Unit 1/error
first.c: In function ‘main’:
first.c:6:5: error: expected ‘;’ before ‘printf’
     printf("Adding a commit\n");
     ^~~~~~
